examples/network-policies/50-test-consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world-consumer
  name: hello-world-consumer
  namespace: consumer-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-consumer
  template:
    metadata:
      labels:
        app: hello-world-consumer
    spec:
      containers:
        - name: hello-world-consumer
          image: strimzi/hello-world-consumer:latest
