examples/network-policies/15-default-deny-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: main-kafka
spec:
  podSelector:
  ingress: []
